# selfiemat

./: .gitignore  CMakeLists.txt  README.MD  README.md  common.cpp  common.h  eye.cpp  eye.h  focus.c  focus.h  main.cpp  mainwindow.cpp  mainwindow.h  photo.cpp  photo.h  scene.cpp  scene.h  screen.cpp  screen.h  selfiemat.cpp  selfiemat.h  selfiemat.kdev4  selfiemat.pro
tests/: CMakeLists.txt  selfiematTest.cpp  selfiematTest.h
